unpackaged/main/default/objects/zoom_app__Zoom_Webinar_Attendee__c/fields/zoom_app__Attentiveness_Score__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Attentiveness_Score__c</fullName>
    <label>Attentiveness Score</label>
    <type>TextArea</type>
</CustomField>