unpackaged/main/default/objects/zoom_app__Zoom_Webinar_Attendee__c/fields/zoom_app__Duration__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Duration__c</fullName>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>