unpackaged/main/default/objects/zoom_app__Zoom_Webinar_Attendee__c/fields/zoom_app__Duration_HH_Mi_SS__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Duration_HH_Mi_SS__c</fullName>
    <label>Duration(HH:Mi:SS)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>