unpackaged/main/default/objects/zoom_app__Zoom_Webinar_Attendee__c/fields/zoom_app__Leave_Time__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Leave_Time__c</fullName>
    <label>Leave Time</label>
    <type>DateTime</type>
</CustomField>