unpackaged/main/default/objects/zoom_app__Zoom_Webinar_Attendee__c/fields/zoom_app__User_Email__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__User_Email__c</fullName>
    <label>User Email</label>
    <type>Email</type>
</CustomField>