unpackaged/main/default/objects/zoom_app__Zoom_Webinar_Attendee__c/fields/zoom_app__UUID__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__UUID__c</fullName>
    <label>UUID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>