unpackaged/main/default/objects/zoom_app__Zoom_Webinar_Attendee__c/listViews/zoom_app__All.listView-meta.xml
<ListView>
    <fullName>zoom_app__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>